--- a/style.css
+++ b/style.css
@@ -19,13 +19,27 @@
     width: 25%;
     height: 100vh;
     border-right: 1px solid #fff;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.left-column .image img {
+    width: 300px;
+    height: 300px;
+}
+
+.left-column .name h2 {
+    font-size: 25px;
+    font-weight: 700;
+    color: #fff;
 }
 
 .right-column {
     margin-left: 25%;
     min-height: 100vh;
     width: 75%;
-    padding: 40px;
+    padding: 40px 60px;
     background-color: #000;
     overflow-y: auto;
 }
@@ -42,7 +56,25 @@ hr {
 }
 
 .right-column .image img {
-    margin-top: 10px;
+    margin: 10px 0;
     width: 75%;
-    height: 500px;
+    height: 450px;
+}
+
+.right-column .text-content p {
+    font-size: 17px;
+    color: #fff;
+    letter-spacing: 1px;
+    margin: 10px 0;
+}
+
+.right-column .text-content ul li {
+    font-size: 16px;
+    color: #fff;
+    letter-spacing: 1px;
+    line-height: 25px;
+}
+
+.right-column .text-content li a {
+    color: #Ca8a04;
 }
