--- a/style.css
+++ b/style.css
@@ -79,9 +79,10 @@
     scrollbar-width: thin;
     display: block;
     width: 85%;
-    margin: 10px 0 0 45px;
+    margin: 10px 0 10px 45px;
 }
 
+/*  Not found message */
 .not-found {
     display: none;
     font-size: 17px;
@@ -144,6 +145,7 @@
     min-height: 100vh;
 }
 
+/* Hidden property for all pages */
 .hidden {
     display: none;
 }
@@ -156,7 +158,7 @@
 }
 
 .page hr {
-    width: 75%;
+    width: 750px;
     color: gray;
 }
 
@@ -167,7 +169,7 @@
 }
 
 .page .text-content {
-    width: 80%;
+    width: 800px;
     margin-bottom: 30px;
 }
 
@@ -210,7 +212,8 @@
     margin: 30px 0;
 }
 
+/* Footer for pages */
 .page .footer {
-    width: 80%;
+    width: 780px;
     margin: 20px 0 20px 0;
 }
