--- a/style.css
+++ b/style.css
@@ -5,6 +5,41 @@
     scroll-behavior: smooth;
 }
 
+/* Navbar */
+
+.navbar {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: #000;
+    height: 50px;
+    width: 100%;
+    position: fixed;
+    padding: 10px 20px;
+    gap: 10px;
+}
+
+.navbar .menu-btn i {
+    color: #dadada;
+    font-size: 25px;
+}
+
+.navbar .nav-image img {
+    height: 50px;
+    width: 50px;
+}
+
+.navbar .nav-name a {
+    font-size: 22px;
+    font-weight: 700;
+    color: #dadada;
+    text-decoration: none;
+}
+
+.navbar .nav-name a:hover {
+    color: #9c9b9b;
+}
+
 /* Container */
 
 .container {
@@ -19,13 +54,14 @@
 /* left - column */
 
 .left-column {
-    position: fixed;
     width: 25%;
+    min-width: 320px;
     height: 100vh;
     border-right: 1px solid #dadada;
     display: flex;
     align-items: center;
     flex-direction: column;
+    background-color: #000;
 }
 
 .left-column .image img {
@@ -100,7 +136,7 @@
 }
 
 .left-column .search-list-container .search-list-item {
-    padding: 5px 10px 5px 16px;
+    padding: 7px 10px 7px 16px;
 }
 
 .left-column .search-list-container .search-list-item a {
@@ -117,13 +153,13 @@
 /* right - column */
 
 .right-column {
-    margin-left: 25%;
     width: 75%;
     padding: 40px 60px;
     background-color: #000;
     overflow-y: auto;
     scrollbar-color: #666666 transparent;
     scrollbar-width: thin;
+    overflow-x: hidden;
 }
 
 .right-column::-webkit-scrollbar {
@@ -169,7 +205,7 @@
 
 .page .image img {
     margin: 10px 0;
-    width: 75%;
+    width: 750px;
     height: 450px;
 }
 
@@ -221,4 +257,355 @@
 .page .footer {
     width: 780px;
     margin: 20px 0 20px 0;
+}
+
+/* Responsiveness */
+
+@media (max-width: 1200px) {
+
+    .right-column {
+        padding: 40px 50px;
+    }
+
+    .page .text-content {
+        width: 750px;
+    }
+}
+
+@media (max-width: 1170px) {
+
+    .page .image img,
+    .page hr {
+        width: 700px;
+    }
+}
+
+@media (max-width: 1130px) {
+
+    .page .text-content,
+    .page .footer {
+        width: 700px;
+    }
+}
+
+@media (max-width: 1115px) {
+
+    .page .image img,
+    .page hr {
+        width: 650px;
+    }
+}
+
+@media (max-width: 1080px) {
+
+    .page .text-content,
+    .page .footer {
+        width: 650px;
+    }
+}
+
+@media (max-width: 1060px) {
+
+    .page hr {
+        width: 600px;
+    }
+
+    .page .image img {
+        width: 600px;
+        height: 400px;
+    }
+}
+
+@media (max-width: 1030px) {
+
+    .page .text-content,
+    .page .footer {
+        width: 600px;
+    }
+}
+
+@media (max-width: 1000px) {
+
+    .page hr {
+        width: 550px;
+    }
+
+    .page .image img {
+        width: 550px;
+        height: 350px;
+    }
+}
+
+@media (max-width: 980px) {
+
+    .page .text-content,
+    .page .footer {
+        width: 550px;
+    }
+}
+
+@media (max-width: 960px) {
+
+    .page hr {
+        width: 500px;
+    }
+
+    .page .image img {
+        width: 500px;
+        height: 300px;
+    }
+}
+
+@media (max-width: 940px) {
+
+    .page .text-content,
+    .page .footer {
+        width: 500px;
+    }
+}
+
+@media (max-width: 900px) {
+
+    .page hr {
+        width: 450px;
+    }
+
+    .page .image img {
+        width: 450px;
+        height: 280px;
+    }
+}
+
+@media (max-width: 890px) {
+
+    .page .text-content,
+    .page .footer {
+        width: 450px;
+    }
+}
+
+@media (max-width: 850px) {
+
+    .page hr {
+        width: 400px;
+    }
+
+    .page .image img {
+        width: 400px;
+        height: 250px;
+    }
+}
+
+@media (max-width: 835px) {
+
+    .page .text-content,
+    .page .footer {
+        width: 400px;
+    }
+}
+
+@media (max-width: 790px) {
+
+    .left-column {
+        top: 70px;
+        position: absolute;
+        left: -100%;
+        transition: all 0.5s ease;
+    }
+
+    .left-column.active {
+        position: fixed;
+        left: 0;
+        transition: all 0.5s ease;
+        width: 100%;
+        min-width: 320px;
+    }
+
+    .left-column .image,
+    .left-column .name {
+        display: none;
+    }
+
+    .left-column .search-box {
+        width: 80%;
+    }
+
+    .left-column .search-list-container {
+        margin-left: 10px;
+        width: 95%;
+    }
+
+    .right-column {
+        width: 100%;
+    }
+
+    .page hr {
+        width: 700px;
+    }
+
+    .page .image img {
+        width: 700px;
+        height: 450px;
+    }
+
+    .page .text-content,
+    .page .footer {
+        width: 700px;
+    }
+}
+
+@media (max-width: 770px) {
+
+    .page .image img,
+    .page hr {
+        width: 650px;
+    }
+
+    .page .text-content,
+    .page .footer {
+        width: 650px;
+    }
+}
+
+@media (max-width: 740px) {
+
+    .page hr {
+        width: 600px;
+    }
+
+    .page .image img {
+        width: 600px;
+        height: 400px;
+    }
+
+    .page .text-content,
+    .page .footer {
+        width: 600px;
+    }
+}
+
+@media (max-width: 690px) {
+
+    .page hr {
+        width: 550px;
+    }
+
+    .page .image img {
+        width: 550px;
+        height: 350px;
+    }
+
+    .page .text-content,
+    .page .footer {
+        width: 550px;
+    }
+}
+
+@media (max-width: 640px) {
+
+    .page hr {
+        width: 500px;
+    }
+
+    .page .image img {
+        width: 500px;
+        height: 300px;
+    }
+
+    .page .text-content,
+    .page .footer {
+        width: 500px;
+    }
+}
+
+@media (max-width: 590px) {
+
+    .page hr {
+        width: 450px;
+    }
+
+    .page .image img {
+        width: 450px;
+        height: 280px;
+    }
+
+    .page .text-content,
+    .page .footer {
+        width: 450px;
+    }
+}
+
+@media (max-width: 540px) {
+
+    .page hr {
+        width: 400px;
+    }
+
+    .page .image img {
+        width: 400px;
+        height: 250px;
+    }
+
+    .page .text-content,
+    .page .footer {
+        width: 400px;
+    }
+}
+
+@media (max-width: 490px) {
+
+    .page hr {
+        width: 350px;
+    }
+
+    .page .image img {
+        width: 350px;
+        height: 200px;
+    }
+
+    .page .text-content,
+    .page .footer {
+        width: 350px;
+    }
+}
+
+@media (max-width: 440px) {
+
+    .page hr {
+        width: 300px;
+    }
+
+    .page .image img {
+        width: 300px;
+    }
+
+    .page .text-content,
+    .page .footer {
+        width: 300px;
+    }
+}
+
+@media (max-width: 390px) {
+
+    .left-column {
+        border: none;
+    }
+
+    .page hr {
+        width: 250px;
+    }
+
+    .page .image img {
+        width: 250px;
+        height: 150px;
+    }
+
+    .page .text-content,
+    .page .footer {
+        width: 250px;
+    }
+
+    .page .inner-list {
+        margin: 0;
+    }
 }
