--- a/style.css
+++ b/style.css
@@ -46,6 +46,16 @@
     color: #9c9b9b;
 }
 
+/* light theme for navbar */
+
+.container.light .navbar {
+    background-color: #fff;
+}
+
+.container.light .nav-name a {
+    color: #222222;
+}
+
 /* Container */
 
 .container {
@@ -75,8 +85,56 @@
     height: 280px;
 }
 
-.left-column .name {
+.wrapper {
     margin-top: -30px;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    align-items: center;
+}
+
+.theme-toggle {
+    display: flex;
+    align-items: center;
+    user-select: none;
+}
+
+.theme-toggle input[type="checkbox"] {
+    position: relative;
+    height: 19px;
+    width: 36px;
+    background: #aeaeae;
+    outline: none;
+    cursor: pointer;
+    border-radius: 20px;
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+    appearance: none;
+    transition: 0.5s;
+}
+
+.theme-toggle input[type="checkbox"]::before {
+    content: '';
+    position: absolute;
+    height: 19px;
+    width: 19px;
+    border-radius: 20px;
+    top: 0;
+    left: 0;
+    transform: scale(0.85);
+    background: linear-gradient(#fff, #f2f2f2, #e6e6e6, #d9d9d9);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    transition: 0.5s;
+}
+
+.theme-toggle input:checked[type="checkbox"] {
+    background: #2a2a2a;
+}
+
+.theme-toggle input:checked[type="checkbox"]::before {
+    left: 19px;
+}
+
+.left-column .name {
     outline: none;
     -webkit-tap-highlight-color: transparent;
     user-select: none;
@@ -173,6 +231,48 @@
     color: #a68af9;
     background: transparent !important;
     outline: none;
+}
+
+/* Light theme for left column */
+
+.container.light .left-column {
+    background-color: #fff;
+}
+
+.container.light .left-column .name a {
+    color: #222222;
+}
+
+.container.light .left-column .search-box {
+    background: #fff;
+    border: 1px solid #e0e0e0;
+    color: #aeaeae;
+}
+
+.container.light .left-column .search-box i {
+    color: #aeaeae;
+}
+
+.container.light .left-column .search-box input {
+    color: #222222;
+}
+
+.container.light .left-column .search-list-container .search-list-item a {
+    color: #222222;
+}
+
+.container.light .left-column .search-list-container .search-list-item.active a {
+    color: #a68af9;
+    background: transparent !important;
+    outline: none;
+}
+
+.container.light .not-found {
+    color: #222222;
+}
+
+.container.light .left-column .search-list-container {
+    scrollbar-color: #aeaeae transparent;
 }
 
 /* right - column */
@@ -273,6 +373,33 @@ hr {
 .page .footer {
     width: 780px;
     margin: 20px 0 20px 0;
+}
+
+/* Light theme for right column and pages */
+
+.container.light .right-column {
+    background: #fff;
+    scrollbar-color: #aeaeae transparent;
+}
+
+.container.light .page .heading h3 {
+    color: #222222;
+}
+
+.container.light .page p {
+    color: #222222;
+}
+
+.container.light .page .text-content ul li {
+    color: #222222;
+}
+
+.container.light .page a {
+    color: #8a5cf5;
+}
+
+.container.light hr {
+    background-color: #aeaeae;
 }
 
 /* Responsiveness */
@@ -411,7 +538,7 @@ hr {
 @media (max-width: 790px) {
 
     .left-column {
-        margin-top: 10px;
+        margin-top: 1px;
         top: 70px;
         position: absolute;
         left: -100%;
@@ -427,7 +554,7 @@ hr {
     }
 
     .left-column .image,
-    .left-column .name {
+    .left-column .wrapper {
         display: none;
     }
 
@@ -701,5 +828,12 @@ hr {
 
     .page .inner-list {
         margin-left: 0;
+    }
+}
+
+@media (max-width: 330px) {
+
+    .navbar {
+        padding: 10px;
     }
 }
