--- a/style.css
+++ b/style.css
@@ -1,8 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
-    font: 1em sans-serif;
+    font-family: "Poppins", sans-serif;
     scroll-behavior: smooth;
+}
+
+/* scrollbar */
+
+::-webkit-scrollbar {
+    height: 8px;
+    scrollbar-width: thin;
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #232323;
+    border-radius: 25px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #373737;
 }
 
 /* Navbar */
@@ -193,8 +215,6 @@
 
 .left-column .search-list-container {
     overflow-y: auto;
-    scrollbar-color: #232323 transparent;
-    scrollbar-width: thin;
     display: block;
     width: 85%;
     margin: 10px 0 10px 45px;
@@ -284,8 +304,13 @@
     color: #222222;
 }
 
-.container.light .left-column .search-list-container {
-    scrollbar-color: #aeaeae transparent;
+.light ::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+.light ::-webkit-scrollbar-thumb {
+    background: #aeaeae;
+    border-radius: 25px;
 }
 
 /* right - column */
@@ -295,8 +320,6 @@
     padding: 40px 60px;
     background-color: #000;
     overflow-y: auto;
-    scrollbar-color: #232323 transparent;
-    scrollbar-width: thin;
     overflow-x: hidden;
 }
 
@@ -378,7 +401,11 @@ hr {
 }
 
 .page .images-links {
-    margin: 30px 0;
+    margin: 20px 0;
+}
+
+.page .images-links p {
+    margin-bottom: 5px;
 }
 
 /* Footer for pages */
@@ -388,11 +415,14 @@ hr {
     margin: 20px 0 20px 0;
 }
 
+.page .footer p {
+    margin-bottom: 5px;
+}
+
 /* Light theme for right column and pages */
 
 .container.light .right-column {
     background: #fff;
-    scrollbar-color: #aeaeae transparent;
 }
 
 .container.light .page .heading h3 {
@@ -413,6 +443,25 @@ hr {
 
 .container.light hr {
     background-color: #aeaeae;
+}
+
+.container.light .end-text p {
+    color: #000;
+}
+
+/* footer for all pages */
+
+footer {
+    padding: -15px 0 0;
+    display: flex;
+    align-items: center;
+}
+
+.end-text p {
+    color: #8c8b8b;
+    font-size: 17px;
+    line-height: 22px;
+    letter-spacing: 1px;
 }
 
 /* Responsiveness */
@@ -836,7 +885,15 @@ hr {
     }
 }
 
-@media (max-width: 380px) {
+@media (max-width: 385px) {
+
+    .navbar #nav-name a {
+        font-size: 17px;
+    }
+
+    .page .heading h3 {
+        font-size: 24px;
+    }
 
     .page hr {
         width: 280px;
@@ -853,6 +910,13 @@ hr {
 
     .not-found img {
         margin-left: -50px;
+    }
+}
+
+@media (max-width: 350px) {
+
+    .page .heading h3 {
+        font-size: 21px;
     }
 }
 
